@@ -5,6 +5,7 @@
 2011-07-27	remko
 	* guru/svnclean.sh:	Renamed from cvsclean.sh and based on .svn directories
 	* GNUmakefile, Makefile:	Replaced cvs traces by svn
+	* pslib.c:		Use SVN revision number in psl_bulkcopy
 
 2011-07-26	remko
 	* doc/GMT_version.tex.in:	Added \GSHHSVERSION
